# focal-daw

./: .gitignore  ADHDaw.md  BUILDING-WINDOWS.md  CLAUDE.md  CMakeLists.txt  Focal.md  README.md
.github/workflows/: windows-build.yml
src/: ADHDawApp.cpp  ADHDawApp.h  FocalApp.cpp  FocalApp.h  Main.cpp
src/dsp/: AuxBusStrip.cpp  AuxBusStrip.h  AuxLaneStrip.cpp  AuxLaneStrip.h  BrickwallLimiter.cpp  BrickwallLimiter.h  BusStrip.cpp  BusStrip.h  ChannelStrip.cpp  ChannelStrip.h  ChordAnalyzer.cpp  ChordAnalyzer.h  HardwareInsertSlot.cpp  HardwareInsertSlot.h  LoudnessMeter.cpp  LoudnessMeter.h  MasterBus.cpp  MasterBus.h  MasteringChain.cpp  MasteringChain.h  MasteringDigitalEq.cpp  MasteringDigitalEq.h  Metronome.cpp  Metronome.h
src/engine/: AtomicPark.h  AudioEngine.cpp  AudioEngine.h  AudioPipelineSelfTest.cpp  AudioPipelineSelfTest.h  BounceEngine.cpp  BounceEngine.h  FileImporter.cpp  FileImporter.h  FocalPlayHead.h  JuceCompat.h  MasteringPlayer.cpp  MasteringPlayer.h  MidiClockEmitter.cpp  MidiClockEmitter.h  MidiSyncReceiver.cpp  MidiSyncReceiver.h  PlaybackEngine.cpp  PlaybackEngine.h  PluginManager.cpp  PluginManager.h  PluginSlot.cpp  PluginSlot.h  RecordManager.cpp  RecordManager.h  Transport.h
src/engine/alsa/: AlsaAudioIODevice.cpp  AlsaAudioIODevice.h  AlsaAudioIODeviceType.cpp  AlsaAudioIODeviceType.h  AlsaPerformanceTest.cpp  AlsaPerformanceTest.h
src/engine/ipc/: IpcSelfTest.cpp  IpcSelfTest.h  PluginHostMain.cpp  PluginIpc.h  RemotePluginConnection.cpp  RemotePluginConnection.h
src/session/: AtomicSnapshot.h  MarkerEditActions.cpp  MarkerEditActions.h  MidiBindings.cpp  MidiBindings.h  RecentSessions.cpp  RecentSessions.h  RegionEditActions.cpp  RegionEditActions.h  Session.cpp  Session.h  SessionSerializer.cpp  SessionSerializer.h  SessionTemplates.cpp  SessionTemplates.h  SnapHelpers.h
src/ui/: ADHDawLookAndFeel.h  AnalogVuMeter.cpp  AnalogVuMeter.h  AppConfig.cpp  AppConfig.h  AudioRegionEditor.cpp  AudioRegionEditor.h  AudioSettingsPanel.cpp  AudioSettingsPanel.h  AuxBusComponent.cpp  AuxBusComponent.h  AuxEditorHost.cpp  AuxEditorHost.h  AuxLaneComponent.cpp  AuxLaneComponent.h  AuxView.cpp  AuxView.h  BounceDialog.cpp  BounceDialog.h  BusComponent.cpp  BusComponent.h  ChannelCompEditor.cpp  ChannelCompEditor.h  ChannelEqEditor.cpp  ChannelEqEditor.h  ChannelStripComponent.cpp  ChannelStripComponent.h  CompMeterStrip.cpp  CompMeterStrip.h  ConsoleView.cpp  ConsoleView.h  DimOverlay.cpp  DimOverlay.h  EditModeToolbar.cpp  EditModeToolbar.h  EmbeddedModal.h  FocalLookAndFeel.h  HardwareInsertEditor.cpp  HardwareInsertEditor.h  ImportTargetPicker.cpp  (+37 more)
tests/: CMakeLists.txt  atomic_park.cpp  crossfade.cpp  embedded_modal_close_safety.cpp  fade_shapes.cpp  file_importer_audio.cpp  hardware_insert.cpp  ipc_stub_round_trip.cpp  session_tick_conversion.cpp  smoke_brickwall_limiter.cpp  snap_helpers.cpp  wayland_smoke_test.md  x11_anti_pattern_guard.cpp
